# Youtube-Video-Summarizer

./: .gitignore  pyproject.toml
api/: db.sqlite3
api/api/: models.py  settings.py  urls.py  views.py
api/youtube_video_summarizer/: .env  llm_config.py  summarize.py
infra/: app.py  cdk.json  dockerfile  pyproject.toml
